2004-02-09  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/selection.cpp (sp_selection_snappoints): Performance fix: add
	just 4 corner points, not a thousand.

	* src/print.h, src/print.cpp (sp_print_bind): Add NR::Matrix version.

	* src/inkscape.cpp: #include sys/types.h, sys/stat.h.

	* src/desktop.h (SP_DESKTOP_ZOOM): Define in terms of expansion()
	function instead of implicit casting.

	* src/arc-context.cpp, src/selection.cpp, src/selection.h:
	Cleanups: greater conformance to Coding_Style, combine declaration
	and first assignment of some vars.

2004-02-07 Johan Ceuppens <jceuppen@easynet.be> 
    * src/libnrtype/nr-type-gnome.cpp src/libnrtype/nr-type-directory
      src/libnrtype/nr-type-xft.cpp src/widgets/font-selector.cpp 
      src/print.cpp src/module.h src/module.cpp
      modules/gnome.cpp: activated --with-gnome-print
      libnrtype/nr-type-primitives.h: removed possible gchar signedness
      bug.

2004-02-07  Nathan Hurst <njh@mail.csse.monash.edu.au>

    * src/widgets/gradient-position.*: modified the gradient knot
      editor to manipulate the knots, rather than rebuilding a gradient
      from scratch each time.

2004-02-07  MenTaLguY <mental@rydia.net>

    * src/xml/repr.h, src/xml/repr-util.cpp:

      cleaned up old code in #if 0 sections

    * src/display/canvas-arena.cpp, src/display/nr-arena-glyphs.cpp,
      src/display/nr-arena-item.cpp, src/display/nr-arena-shape.cpp,
      src/display/nr-arena.cpp, src/display/nr-arena.h:

      cleaned up old code in #if 0 sections

    * src/desktop-affine.cpp, src/desktop.cpp, src/draw-context.cpp,
      src/dropper-context.cpp, src/dyna-draw-context.cpp,
      src/seltrans.cpp, src/sp-root.cpp, src/sp-text.cpp,
      src/libnr/nr-macros.h, src/libnr/nr-types.h, src/libnr/nr-matrix.h,
      src/libnr/nr-matrix.cpp, src/libnrtype/nr-font.cpp,
      src/libnrtype/nr-rasterfont.cpp, src/livarot/PathSimplify.cpp,
      src/livarot/ShapeSweep.cpp:
